Core/src/main/java/com/example/error/exception/ExpiredTokenException.java
package com.example.error.exception;

import com.example.error.BaseErrorException;
import com.example.error.GlobalErrorCode;

public class ExpiredTokenException extends BaseErrorException {

    public static final BaseErrorException EXCEPTION = new ExpiredTokenException();

    private ExpiredTokenException() {
        super(GlobalErrorCode.EXPIRED_TOKEN);
    }
}